@@ -78,24 +78,6 @@
 		<plugins>
 
 			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<!-- This configuration allows the JUnit test runner to find the unit tests -->
-				<configuration>
-					<argLine>
-						--add-opens=com.avereon.zevra/com.avereon.data=ALL-UNNAMED
-						--add-opens=com.avereon.zevra/com.avereon.event=ALL-UNNAMED
-						--add-opens=com.avereon.zevra/com.avereon.index=ALL-UNNAMED
-						--add-opens=com.avereon.zevra/com.avereon.log=ALL-UNNAMED
-						--add-opens=com.avereon.zevra/com.avereon.product=ALL-UNNAMED
-						--add-opens=com.avereon.zevra/com.avereon.result=ALL-UNNAMED
-						--add-opens=com.avereon.zevra/com.avereon.settings=ALL-UNNAMED
-						--add-opens=com.avereon.zevra/com.avereon.transaction=ALL-UNNAMED
-						--add-opens=com.avereon.zevra/com.avereon.util=ALL-UNNAMED,com.fasterxml.jackson.databind
-					</argLine>
-				</configuration>
-			</plugin>
-
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<executions>
